test/tests/stages/18_structures/invalid_parse/extra_credit/struct_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  union
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
